# hellotimepro

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml
.claude/: launch.json
backends/fastapi/: .gitignore  README.md  build  pyproject.toml  run  test
backends/fastapi/alembic/: env.py
backends/fastapi/alembic/versions/: 0001_initial.py
backends/fastapi/app/: __init__.py  deps.py  main.py
backends/fastapi/app/api/v1/: __init__.py  auth.py  capsules.py  favorites.py  health.py  me.py  plaza.py
backends/fastapi/app/core/: config.py  errors.py  security.py
backends/fastapi/app/db/: base.py  engine.py  session.py  types.py
backends/fastapi/app/models/: __init__.py  capsule.py  favorite.py  refresh_token.py  user.py
backends/fastapi/app/repositories/: __init__.py
backends/fastapi/app/schemas/: avatar.py  capsule.py  common.py  health.py  user.py
backends/fastapi/app/services/: auth_service.py  avatar_service.py  capsule_service.py  favorite_service.py  plaza_service.py  user_service.py
backends/fastapi/tests/: conftest.py  test_smoke.py
backends/spring-boot/: README.md  build  pom.xml  run  test
docs/: 01-requirements.md  02-design.md  03-roadmap.md
scripts/: hello
spec/api/: openapi.yaml
spec/avatars/: catalog.json
spec/db/: schema.sql
spec/icons/: README.md  icons.json
spec/styles/: cyber.css  palette.css  tokens.css
ui-prototype/: about.html  capsule-opened.html  capsule-sealed.html  create.html  index.html  login.html  me-created.html  me-favorites.html  me-profile.html  open.html  register.html
(+62 files in other folders)
